--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm turbo run build",
+    "push": "pnpm changeset && git push",
     "release": "pnpm changeset version && pnpm changeset publish"
   },
   "keywords": [],
