--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,8 @@ jobs:
         id: changesets
         uses: ./.github/actions/changesets
 
+      - name: debug
+        run: echo ${{ steps.changesets.outputs.createPrOnly }}
       # merge version pr
       - name: merge version pr
         if: steps.changesets.outputs.createPrOnly == 'true'
@@ -52,6 +54,8 @@ jobs:
             Docs Deployed to server successfully.
             See changes: https://docs.bbki.ng
 
+      - name: debug
+        run: echo ${{ steps.changesets.outputs.shouldDeploySite }}
       # deploy site
       - name: deploy site artifact
         if: steps.changesets.outputs.shouldDeploySite == 'true'
