--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,18 +33,16 @@ jobs:
         id: changesets
         uses: ./.github/actions/changesets
 
-      - name: debug
-        run: echo ${{ steps.changesets.outputs.createPrOnly }}
       # merge version pr
       - name: merge version pr
-        if: steps.changesets.outputs.createPrOnly == 'true'
+        if: ${{ steps.changesets.outputs.createPrOnly }}
         uses: ./.github/actions/merge-version-pr
         with:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
       # deploy manual
       - name: deploy manual artifact
-        if: steps.changesets.outputs.shouldDeployManual == 'true'
+        if: ${{ steps.changesets.outputs.shouldDeployManual }}
         uses: ./.github/actions/deploy
         with:
           source: 'packages/manual/build/'
@@ -54,11 +52,9 @@ jobs:
             Docs Deployed to server successfully.
             See changes: https://docs.bbki.ng
 
-      - name: debug
-        run: echo ${{ steps.changesets.outputs.shouldDeploySite }}
       # deploy site
       - name: deploy site artifact
-        if: steps.changesets.outputs.shouldDeploySite == 'true'
+        if: ${{ steps.changesets.outputs.shouldDeploySite }}
         uses: ./.github/actions/deploy
         with:
           source: 'packages/site/dist/'
