chore: fix steps condition

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,14 +35,14 @@ jobs:
 
       # merge version pr
       - name: merge version pr
-        if: ${{ steps.changesets.outputs.createPrOnly }}
+        if: ${{ steps.changesets.outputs.createPrOnly == 'true' }}
         uses: ./.github/actions/merge-version-pr
         with:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
       # deploy manual
       - name: deploy manual artifact
-        if: ${{ steps.changesets.outputs.shouldDeployManual }}
+        if: ${{ steps.changesets.outputs.shouldDeployManual == 'true' }}
         uses: ./.github/actions/deploy
         with:
           source: 'packages/manual/build/'
@@ -54,7 +54,7 @@ jobs:
 
       # deploy site
       - name: deploy site artifact
-        if: ${{ steps.changesets.outputs.shouldDeploySite }}
+        if: ${{ steps.changesets.outputs.shouldDeploySite == 'true' }}
         uses: ./.github/actions/deploy
         with:
           source: 'packages/site/dist/'
