--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         uses: ./.github/actions/changesets
 
       - name: debug
-        run: echo ${{  toJSON(steps.changesets.outputs.createPrOnly) }}
+        run: echo ${{ toJson(steps.changesets.outputs.createPrOnly) }}
       # merge version pr
       - name: merge version pr
         if: ${{ steps.changesets.outputs.createPrOnly }}
