--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,9 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", "build/**"]
+    },
+    "dev": {
+      "cache": false
     }
   }
 }
