--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm turbo run build",
     "build:components": "pnpm turbo run build --filter=@bbki.ng/components",
+    "changeset": "changeset",
     "release": "pnpm changeset version && pnpm changeset publish",
     "start:site": "pnpm turbo run dev --filter=@bbki.ng/site --parallel",
     "start:doc": "pnpm turbo run dev --filter=@bbki.ng/manual --parallel",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@changesets/cli": "2.24.1",
     "husky": "^7.0.0",
+    "pretty-quick": "^3.1.1",
     "turbo": "1.3.4"
   }
 }
