--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -30,6 +30,7 @@
     "@bbki.ng/stylebase": "workspace:0.0.19",
     "@mdx-js/mdx": "2.0.0-next.9",
     "@mdx-js/react": "^1.6.22",
+    "@mdx-js/rollup": "3.0.0",
     "@tailwindcss/typography": "^0.5.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.1",
@@ -46,7 +47,7 @@
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^5.0.0",
     "rehype-slug": "^5.0.1",
-    "remark-frontmatter": "^4.0.1",
+    "remark-frontmatter": "5.0.0",
     "remark-gfm": "^3.0.0",
     "remark-mdx-frontmatter": "^1.0.1",
     "remark-parse": "^10.0.0",
@@ -55,7 +56,7 @@
     "tailwindcss": "^3.0.7",
     "ts-jest": "^27.1.1",
     "typescript": "^4.5.4",
-    "vite": "3.0.0",
+    "vite": "5.0.0",
     "vite-plugin-mdx": "^3.5.8",
     "vite-plugin-pwa": "^0.11.3",
     "workbox-window": "^6.3.0"
