--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm turbo run build",
-    "build:components": "pnpm turbo run build --filter=@bbki.ng/components",
+    "build:com": "pnpm turbo run build --filter=@bbki.ng/components",
     "build:site": "pnpm turbo run build --filter=@bbki.ng/site",
     "changeset": "changeset",
     "release": "pnpm changeset version && pnpm changeset publish",
     "start:site": "pnpm turbo run dev --filter=@bbki.ng/site --parallel",
     "start:doc": "pnpm turbo run dev --filter=@bbki.ng/manual --parallel",
+    "start:com": "pnpm turbo run dev --filter=@bbki.ng/components",
     "postinstall": "husky install"
   },
   "keywords": [],
