--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -59,7 +59,7 @@
     "typescript": "^4.5.4",
     "vite": "5.0.0",
     "vite-plugin-mdx": "^3.5.8",
-    "vite-plugin-pwa": "^0.11.3",
+    "vite-plugin-pwa": "0.19",
     "workbox-window": "^6.3.0"
   },
   "author": "bbbottle",
