refactor: blink dot

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm turbo run build",
     "build:com": "pnpm turbo run build --filter=@bbki.ng/components",
+    "build:style": "pnpm turbo run build --filter=@bbki.ng/stylebase",
     "build:site": "pnpm turbo run build --filter=@bbki.ng/site",
     "changeset": "changeset",
     "release": "pnpm changeset version && pnpm changeset publish",
+    "start:style": "pnpm turbo run dev --filter=@bbki.ng/stylebase --parallel",
     "start:site": "pnpm turbo run dev --filter=@bbki.ng/site --parallel",
     "start:doc": "pnpm turbo run dev --filter=@bbki.ng/manual --parallel",
     "start:com": "pnpm turbo run dev --filter=@bbki.ng/components",
