--- a/.github/actions/changesets/action.yml
+++ b/.github/actions/changesets/action.yml
@@ -6,10 +6,10 @@ outputs:
     value: ${{ steps.changesets.outputs.published == 'false' && steps.changesets.outputs.hasChangesets == 'true' }}
   shouldDeploySite:
     description: "changesets/action published packages and include @bbki.ng/site"
-    value: ${{ steps.changesets.outputs.published == 'true' && (contains(fromJson(steps.changesets.outputs.publishedPackages).*.name, '@bbki.ng/site')) }}
+    value: ${{ steps.changesets.outputs.published == 'true' && (contains(fromJson(steps.changesets.outputs.publishedPackages).*.title, '@bbki.ng/site')) }}
   shouldDeployManual:
     description: "changesets/action published packages and include @bbki.ng/manual"
-    value: ${{ steps.changesets.outputs.published == 'true' && (contains(fromJson(steps.changesets.outputs.publishedPackages).*.name, '@bbki.ng/manual')) }}
+    value: ${{ steps.changesets.outputs.published == 'true' && (contains(fromJson(steps.changesets.outputs.publishedPackages).*.title, '@bbki.ng/manual')) }}
 runs:
   using: "composite"
   steps:
