--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -8,7 +8,7 @@ inputs:
     description: remote target path
     required: true
   package:
-    description: package name
+    description: package title
     required: true
   msg:
     description: messages send to channel
