--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
 
       # deploy site
       - name: deploy site artifact
+        if: ${{ steps.changesets.outputs.shouldDeploySite == 'true' }}
         uses: ./.github/actions/deploy
         with:
           source: "packages/site/dist/"
