chore: add debug statement

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
 
       # debug deploy site
       - name: debug deploy site
-        run: echo ${{ steps.changesets.outputs.published }}
+        run: echo ${{ steps.changesets.outputs.published == 'true' }}
 
       # deploy site
       - name: deploy site artifact
