--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,8 +24,10 @@
     }
   },
   "dependencies": {
-    "classnames": "2.3.1",
     "@bbki.ng/stylebase": "workspace:0.1.3",
+    "@radix-ui/react-context-menu": "2.1.5",
+    "@radix-ui/react-icons": "1.3.0",
+    "classnames": "2.3.1",
     "phenomenon": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
