--- a/packages/stylebase/package.json
+++ b/packages/stylebase/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/typography": "0.5.4",
+    "tailwindcss-animate": "1.0.7",
     "vite": "^3.0.0"
   },
   "devDependencies": {
