--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -58,6 +58,7 @@
     "ts-jest": "^27.1.1",
     "typescript": "^4.5.4",
     "vite": "5.0.0",
+    "vite-plugin-glsl": "1.2.1",
     "vite-plugin-mdx": "^3.5.8",
     "vite-plugin-pwa": "0.19",
     "workbox-window": "^6.3.0"
