--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -2,18 +2,18 @@ name: install-dependencies
 description: install dependencies
 
 runs:
-  using: 'composite'
+  using: "composite"
   steps:
     # setup pnpm and install dependencies
     - name: setup pnpm
       uses: pnpm/action-setup@v2.2.2
       with:
         version: 7
-    - name: Setup Node.js 17.x
+    - name: Setup Node.js 18.12.x
       uses: actions/setup-node@v2
       with:
-        node-version: 17.x
-        cache: 'pnpm'
+        node-version: 18.12.x
+        cache: "pnpm"
     - name: Install pnpm
       shell: bash
       run: npm install -g pnpm
