--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -17,7 +17,7 @@
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/blog/*"]
     }
   },
   "include": ["./src", "vite.config.js"]
