--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@bbki.ng/components": "workspace:2.4.2",
+    "@extism/extism": "2.0.0-rc11",
     "@supabase/supabase-js": "^1.35.4",
     "classnames": "2.3.1",
     "react": "^18.0.0",
