--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -26,7 +26,8 @@
     "react-hotkeys-hook": "^3.4.3",
     "react-router-dom": "6",
     "sonner": "1.4.0",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "vaul": "1.1.2"
   },
   "devDependencies": {
     "@bbki.ng/stylebase": "workspace:0.3.2",
