--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -60,6 +60,7 @@
     "ts-jest": "^27.1.1",
     "typescript": "^4.5.4",
     "vite": "5.0.0",
+    "vite-plugin-cross-origin-isolation": "0.1.6",
     "vite-plugin-glsl": "1.2.1",
     "vite-plugin-mdx": "^3.5.8",
     "vite-plugin-pwa": "0.19",
