--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.1",
-    "@bbki.ng/stylebase": "workspace:0.4.10",
+    "@bbki.ng/stylebase": "workspace:*",
     "@radix-ui/react-context-menu": "2.1.5",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.1",
