--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,6 +10,7 @@
     "hono": "^4.10.7"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "4.20251128.0",
     "wrangler": "^4.4.0"
   }
 }
