--- a/packages/backend/wrangler.jsonc
+++ b/packages/backend/wrangler.jsonc
@@ -2,7 +2,7 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "backend",
   "main": "src/index.ts",
-  "compatibility_date": "2025-12-01"
+  "compatibility_date": "2025-12-01",
   // "compatibility_flags": [
   //   "nodejs_compat"
   // ],
@@ -21,13 +21,13 @@
   //     "bucket_name": "my-bucket"
   //   }
   // ],
-  // "d1_databases": [
-  //   {
-  //     "binding": "MY_DB",
-  //     "database_name": "my-database",
-  //     "database_id": ""
-  //   }
-  // ],
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "bbki.ng",
+      "database_id": "e938a347-b3be-4d60-9217-52f209ab7bb4",
+    },
+  ],
   // "ai": {
   //   "binding": "AI"
   // },
