--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "@extism/extism": "2.0.0-rc11",
-    "@bbki.ng/components": "workspace:2.6.8",
+    "@bbki.ng/components": "workspace:*",
+    "@bbki.ng/stylebase": "workspace:*",
     "@supabase/supabase-js": "^1.35.4",
     "classnames": "2.3.1",
     "react": "^18.0.0",
@@ -30,7 +31,6 @@
     "vaul": "1.1.2"
   },
   "devDependencies": {
-    "@bbki.ng/stylebase": "workspace:0.4.10",
     "@mdx-js/mdx": "2.0.0-next.9",
     "@mdx-js/react": "^1.6.22",
     "@mdx-js/rollup": "3.0.0",
