--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -2,11 +2,7 @@
   "name": "@bbki.ng/components",
   "version": "2.6.8",
   "type": "module",
-  "scripts": {
-    "build": "tsup",
-    "prepare": "tsup",
-    "dev": "tsup --watch"
-  },
+  "scripts": {},
   "files": [
     "dist"
   ],
@@ -24,8 +20,8 @@
     }
   },
   "dependencies": {
-    "@hookform/resolvers": "3.9.1",
     "@bbki.ng/stylebase": "workspace:*",
+    "@hookform/resolvers": "3.9.1",
     "@radix-ui/react-context-menu": "2.1.5",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.1",
@@ -40,15 +36,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
+    "@tailwindcss/postcss": "4.1.17",
     "@types/node": "18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "autoprefixer": "10.4.7",
     "babel-loader": "^8.2.5",
     "postcss": "8.4.14",
     "react-router-dom": "6.3.0",
-    "tailwindcss": "3.1.6",
+    "tailwindcss": "4.1.17",
     "tsup": "6.2.0",
     "typescript": "^4.6.4"
   }
