--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -2,7 +2,11 @@
   "name": "@bbki.ng/components",
   "version": "2.6.8",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "build": "tsup",
+    "prepare": "tsup",
+    "dev": "tsup --watch"
+  },
   "files": [
     "dist"
   ],
@@ -11,17 +15,24 @@
   "typings": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "development": "./lib/index.ts",
+      "production": "./dist/index.mjs",
+      "types": "./src/index.ts"
+    },
+    "./*": {
+      "development": "./lib/*/index.ts",
+      "production": "./dist/*.mjs",
+      "types": "./src/components/*/index.ts"
     },
     "./style": {
-      "import": "./dist/index.css",
-      "require": "./dist/index.css"
+      "development": "./lib/index.css",
+      "production": "./dist/styles/index.mjs",
+      "default": "./lib/index.css"
     }
   },
   "dependencies": {
-    "@bbki.ng/stylebase": "workspace:*",
     "@hookform/resolvers": "3.9.1",
+    "@bbki.ng/stylebase": "workspace:*",
     "@radix-ui/react-context-menu": "2.1.5",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.1",
@@ -36,15 +47,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
-    "@tailwindcss/postcss": "4.1.17",
     "@types/node": "18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "10.4.7",
     "babel-loader": "^8.2.5",
     "postcss": "8.4.14",
     "react-router-dom": "6.3.0",
-    "tailwindcss": "4.1.17",
+    "tailwindcss": "3.1.6",
     "tsup": "6.2.0",
     "typescript": "^4.6.4"
   }
