--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -16,6 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["lib"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["lib"]
 }
