--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,9 +3,9 @@
   "version": "2.6.8",
   "type": "module",
   "scripts": {
-    "build": "tsup",
-    "prepare": "tsup",
-    "dev": "tsup --watch"
+    "build": "vite build",
+    "prepare": "vite build",
+    "dev": "vite dev"
   },
   "files": [
     "dist"
@@ -31,8 +31,8 @@
     }
   },
   "dependencies": {
-    "@hookform/resolvers": "3.9.1",
     "@bbki.ng/stylebase": "workspace:*",
+    "@hookform/resolvers": "3.9.1",
     "@radix-ui/react-context-menu": "2.1.5",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.1",
@@ -40,8 +40,6 @@
     "class-variance-authority": "0.7.1",
     "classnames": "2.3.1",
     "phenomenon": "^1.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-hook-form": "7.54.2",
     "zod": "3.24.1"
   },
@@ -54,9 +52,14 @@
     "autoprefixer": "10.4.7",
     "babel-loader": "^8.2.5",
     "postcss": "8.4.14",
-    "react-router-dom": "6.3.0",
     "tailwindcss": "3.1.6",
     "tsup": "6.2.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "vite-plugin-dts": "4.5.4"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "6"
   }
 }
