--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -40,8 +40,7 @@
     "class-variance-authority": "0.7.1",
     "classnames": "2.3.1",
     "phenomenon": "^1.6.0",
-    "react-hook-form": "7.54.2",
-    "zod": "3.24.1"
+    "react-hook-form": "7.54.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
