--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -51,8 +51,8 @@
     "autoprefixer": "10.4.7",
     "babel-loader": "^8.2.5",
     "postcss": "8.4.14",
+    "vite": "5.0.0",
     "tailwindcss": "3.1.6",
-    "tsup": "6.2.0",
     "typescript": "^4.6.4",
     "vite-plugin-dts": "4.5.4"
   },
