--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,10 +8,12 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@simplewebauthn/server": "13.2.2",
     "hono": "^4.10.7"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20251128.0",
-    "wrangler": "^4.4.0"
+    "@types/node": "25.0.3",
+    "wrangler": "^4.58.0"
   }
 }
